<resources>
    <string
        name="app_name">
        360DigitalGyan.com
    </string>
    <string
        name="app_name_my_custom">
        360DigitalGyan
    </string>
    <string
        name="str_splash_learn_things">
        LEARN
        DIGITAL
        MARKETING,
        JAVA,
        ANDROID,
        SOFTWARE
        TESTING
        &amp;
        MORE
    </string>
    <string
        name="title_home">
        Home
    </string>
    <string
        name="title_technical_terms">
        Technical
        Terms
    </string>
    <string
        name="title_video_tutorials">
        Video
        Tutorials
    </string>
    <string
        name="title_interview_ques">
        Interview
        Questions
    </string>
    <string
        name="title_quiz_test">
        Quiz
        Tests
    </string>
    <string
        name="title_ques_ans">
        Questions
        &amp;
        Answers
    </string>
    <string
        name="title_notifications">
        Notifications
    </string>
    <string
        name="title_suggestions">
        Suggestions
        &amp;
        Complaints
    </string>
    <string
        name="title_rate_us">
        Rate
        Us
    </string>
    <string
        name="title_share">
        Share
    </string>
    <string
        name="title_about_us">
        About
        Us
    </string>
    <string
        name="title_contact_us">
        Contact
        Us
    </string>
    <string
        name="title_training_courses">
        Training
        Courses
    </string>
    <string
        name="title_our_services">
        Our
        Services
    </string>
    <string
        name="title_placed_students">
        Placed
        Students
    </string>
    <string
        name="title_students_view">
        Students
        View
    </string>
    <string
        name="title_study_material">
        Study
        Material
    </string>
    <string-array
        name="array_home_tiles">
        <item>
            @string/title_video_tutorials
        </item>
        <item>
            @string/title_interview_ques
        </item>
        <item>
            @string/title_quiz_test
        </item>
        <item>
            @string/title_technical_terms
        </item>
        <item>
            @string/title_ques_ans
        </item>
        <item>
            @string/title_study_material
        </item>
        

    </string-array>
    <string-array
        name="array_home_descriptions">
        <item>
            Enter
            into
            our
            visual
            world
            where
            you
            can
            enrich
            your
            skills
            and
            get
            a
            better
            learning
            experience.
        </item>
        <item>
            Get
            to
            know
            the
            frequently
            asked
            questions
            in
            Company
            Interview
            with
            our
            excellent
            set
            of
            questions.
        </item>
        <item>
            Self
            evaluation
            is
            important
            to
            know
            how
            well
            you
            are
            familiar
            with
            the
            topics.
        </item>
        <item>
            Welcome
            to
            360DigitalGyan
            an
            Glossary
            where
            you
            get
            the
            meaning
            of
            terms
            used
            in
            the
            Marketing
            world.
        </item>
        <item>
            We
            provide
            you
            a
            medium
            for
            open
            discussion
            where
            you
            can
            share
            your
            knowledge
            or
            post
            a
            question.
        </item>
        <item>
            Enhance
            your
            Digital
            skills
            via
            our
            study
            material
            guide,
            which
            will
            give
            you
            an
            insight
            of
            the
            various
            useful
            topics.
        </item>

    </string-array>
    <string
        name="title_php">
        PHP
    </string>
    <string
        name="title_web">
        WEB
        DEVELOPMENT
    </string>
    <string
        name="title_android">
        ANDROID
    </string>
    <string
        name="title_java">
        JAVA
    </string>
    <string
        name="title_seo">
        SEO
    </string>
    <string
        name="title_adv_php">
        ADVANCED
        PHP
    </string>
    <string
        name="title_iphone">
        iPHONE
    </string>
    <string
        name="title_html_css">
        HTML
        &amp;
        CSS
    </string>
    <string
        name="title_wordpress">
        WORDPRESS
    </string>
    <string
        name="title_c">
        C
    </string>
    <string
        name="title_c_plus_plus">
        C++
    </string>
    <string
        name="title_cake_php">
        CAKE
        PHP
    </string>
    <string
        name="title_magento">
        Magento
    </string>
    <string
        name="title_digital_marketing">
        Digital
        Marketing
    </string>
    <string
        name="title_adv_java">
        Advanced
        Java
    </string>
    <string
        name="title_adv_android">
        Advanced
        Android
    </string>
    <string
        name="title_testing_manual">
        Testing(Manual)
    </string>
    <string
        name="title_testing_automation">
        Testing(Automation)
    </string>
    <string
        name="title_laravel">
        Laravel
        Framework
    </string>
    <string
        name="title_ruby_rails">
        Ruby
        on
        Rails
    </string>
    <string
        name="title_python">
        Python
    </string>
    <string
        name="title_graphic_design">
        Graphic
        Designing
    </string>
    <string
        name="training_number_1">
        +91-9269698122
    </string>
    <string
        name="training_number_2">
        +91-8561089567
    </string>
    <string-array
        name="array_training_courses">
        <item>
            @string/title_php
        </item>
        <item>
            @string/title_web
        </item>
        <item>
            @string/title_android
        </item>
        <item>
            @string/title_java
        </item>
        <item>
            @string/title_seo
        </item>
        <item>
            @string/title_adv_php
        </item>
        <item>
            @string/title_iphone
        </item>
        <item>
            @string/title_html_css
        </item>
        <item>
            @string/title_wordpress
        </item>
        <item>
            @string/title_c
        </item>
        <item>
            @string/title_c_plus_plus
        </item>
        <item>
            @string/title_cake_php
        </item>
        <item>
            @string/title_magento
        </item>
        <item>
            @string/title_digital_marketing
        </item>
        <item>
            @string/title_adv_java
        </item>
        <item>
            @string/title_adv_android
        </item>
        <item>
            @string/title_testing_manual
        </item>
        <item>
            @string/title_testing_automation
        </item>
        <item>
            @string/title_laravel
        </item>
        <item>
            @string/title_ruby_rails
        </item>
        <item>
            @string/title_python
        </item>
        <item>
            @string/title_graphic_design
        </item>
    </string-array>
    <string-array
        name="services_titles">
        <item>
            Website
            Designing
        </item>
        <item>
            Website
            Development
        </item>
        <item>
            Android
            Application
            Development
        </item>
        <item>
            iPhone
            Application
            Development
        </item>
        <item>
            Search
            Engine
            Optimization
        </item>
        <item>
            E-commerce
            Solutions
        </item>
        <item>
            PSD
            To
            HTML
            Conversion
        </item>
        <item>
            SEO
            Packages
        </item>
        <item>
            Mobile
            Responsive
        </item>
        <item>
            Web
            Hosting
        </item>
        <item>
            Domain
            Registration
        </item>
    </string-array>
    <string
        name="how_we_work">
        How
        We
        Work
    </string>
    <string
        name="we_listen_to_you">
        We
        Listen
        \n
        to
        you
    </string>
    <string
        name="we_plan_your_work">
        We
        Plan
        \n
        your
        work
    </string>
    <string
        name="we_design_creatively">
        We
        Design
        \n
        creatively
    </string>
    <string
        name="we_execute_publish_maintain">
        We
        Execute,\n
        Publish
        and
        Maintain
    </string>
    <string
        name="about_us_text_first">
        WsCube
        Tech
        was
        established
        in
        the
        year
        2010
        with
        an
        aim
        to
        become
        the
        fastest
        emerging
        Offshore
        Outsourcing
        Company
        which
        will
        aid
        its
        clientele
        to
        grow
        high
        with
        rapid
        pace.
        At
        WsCube
        Tech,
        we
        offer
        a
        business
        solution
        emphasizing
        on
        the
        client
        stipulation
        all
        on
        an
        affordable
        range.
        Our
        online
        trade
        solutions
        are
        offered
        to
        business
        enterprises
        all
        around
        the
        globe.
    </string>
    <string
        name="about_us_text_second"
        translatable="false">
        WsCube
        Tech
        Is
        A
        Place
        Where
        \n
        We
        Convert
        Your
        Dream
        Into
        Reality
    </string>
    <string
        name="about_us_text_third">
        We
        are
        a
        highly
        specialized
        Website
        Development
        Company
        offering
        cutting
        edge
        Web
        Development
        Services.
        We
        offer
        superior
        customer
        service
        to
        the
        wide
        base
        of
        our
        clients.
        Our
        business-driven
        approach
        separates
        us
        from
        typical
        Web
        Design
        Companies.
        For
        the
        past
        Five
        years,
        we
        have
        built
        a
        reputation
        for
        creating
        a
        positive
        return
        on
        investment
        for
        our
        clients.
    </string>
</resources>